--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@vue/test-utils": "^1.0.0-beta.20",
     "chai": "^4.1.2",
     "lint-staged": "^7.2.2",
+    "postcss-salad": "^2.0.1",
     "vue-template-compiler": "^2.5.17"
   },
   "gitHooks": {
@@ -36,5 +37,6 @@
       "vue-cli-service lint",
       "git add"
     ]
-  }
+  },
+  "peerDependencies": {}
 }
